# home-backup-mgmt

./: .gitignore  CHANGELOG.md  CLAUDE.md  HOSTS_RESTORE.md  PLAYBOOK.md  POST-MIGRATION-PROMPT.md  README.md  SARATOGA_RESTORE.md  TODO.md  Taskfile.yml  USE_CASES.md  backup-use-cases.txt  pyproject.toml
configs/: replication-tasks.json  snapshot-tasks.json  ssh-connections.json  ssh-keypairs.sanitized.json
configs/cron/: ldavis-crontab  root-crontab  tourbillon-crontab
configs/hosts/: arrow-iii.toml  defaults.toml  ldavis-dev-01.toml  lynchmbp.toml  pilatus.toml
configs/hosts/excludes/: linux-user.txt  lynchmbp.txt  mac-user.txt
configs/repos/: defaults.toml
configs/repos/github/lynchdavis/: flightclub-deployment-beta.toml
configs/sanoid/: sanoid.conf
configs/templates/: replication-task-media.json  snapshot-task-media.json
doc/: ADR-001-repo-mirror.md  ADR-002-host-backups-linux.md  ADR-003-host-backups-single-user-mode.md  ADR-004-kodiak-side-service-user.md  ADR-005-off-site-tier-idrive.md  CREDENTIALS.md  GAPS.md  NAMING.md  SESSION-PROMPT.md
scripts/: backup-photography-parallel.sh  backup-saratoga.sh  collect-saratoga-state.sh
servers/: saratoga.toml.example
src/backup_server/: __main__.py  cli.py  discovery.py  execute.py  index.py  preflight.py  report.py
tests/: README.md  check-saratoga-replication.sh  restore-drill.sh  test-restore-drill.sh  test_discovery.py  test_index.py  test_preflight.py  test_smoke.py
tests/fixtures/: hosts_saratoga_lan_only
tests/fixtures/autofs/: saratoga-01.autofs  saratoga-01.nfs
