[project]
name = "backup-server"
version = "0.1.0"
description = "Pull-direction NAS backup tool with layered discovery and preflight checks"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
backup-server = "backup_server.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
